appId: com.headlamp.uno
---
- killApp
- launchApp:
   appId: com.headlamp.uno.stage
- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Mood check-in
    direction: DOWN

- tapOn: Mood check-in
-  runFlow:
        when:
            visible:
                text: "Got IT"
        commands:
            - tapOn: 
               text:  "Got IT"   
- tapOn:
   id: uno-discrete-slider-container
   index: 0
- waitForAnimationToEnd

# neutral every time
- tapOn:
   id: uno-discrete-slider-container
   index: 1 
# neutral every time
- waitForAnimationToEnd
- tapOn:
    id: "submit-button-text"

- tapOn: "Content"
- waitForAnimationToEnd
- tapOn:
    id: "submit-button-text"
- waitForAnimationToEnd

- tapOn: Education
- waitForAnimationToEnd
- tapOn: Family
- tapOn:
    id: "submit-button-text"
- tapOn: Learning
- waitForAnimationToEnd
- tapOn: Growth
- waitForAnimationToEnd
- tapOn:
    id: "submit-button-text"

- waitForAnimationToEnd
- tapOn:
    text: My typical
    index: 0
- tapOn:
    text: My typical
    index: 0    
- waitForAnimationToEnd

- tapOn:
    text: My typical
    index: 0
- waitForAnimationToEnd

- tapOn:
    text: My typical
    index: 1
- waitForAnimationToEnd
# continue button
- tapOn:
    id: "button"
    index: 2
- waitForAnimationToEnd
# if mood logging is done
- assertNoDefectsWithAI

- runFlow:
    when:
      visible:
         text: "Great job logging again today!"
    commands:
      - tapOn: "VIEW PREVIOUS SUGGESTIONS"
      -  runFlow:
          when:
            visible:
             text: "Got IT"
          commands:
            - tapOn: 
               text:  "Got IT"     
      - assertVisible : insights         
- assertNoDefectsWithAI

- waitForAnimationToEnd
- runFlow:
    when:
      visible:
         text: " Generating personal insights based on your power level"
    commands:
        - assertVisible : Generating personal insights based on your power level
        - waitForAnimationToEnd
            # continue button
        - tapOn:
            id: "button"
        - retryTapIfNoChange: false
        - scroll
        # skip
        - tapOn:
            id: "button"
            index: 1
        - waitForAnimationToEnd


        - assertVisible: Hypothesis
        - assertVisible: "Why you might be feeling "
        # continue button
        - tapOn:
            id: "button"

        - assertVisible: Suggestions
        # done button
        - tapOn:
            id: "button"


# - scroll
# # skip
# - tapOn:
#     id: "button"
#     index: 1
# - waitForAnimationToEnd

# - assertVisible : Generating personal insights
# - waitForAnimationToEnd
# # continue button
# - tapOn:
#     id: "button"

# - assertVisible: Hypothesis
# - assertVisible: "Why you might be feeling "
# # continue button
# - tapOn:
#     id: "button"

# - assertVisible: Suggestions
# # done button
# - tapOn:
#     id: "button"