appId: com.headlamp.uno
---
- killApp
- launchApp:
   appId: com.headlamp.uno.stage
# flow for Personality assessment covered 4 flows ,
# accounting both first time and take again 

# "Personality profile (DISC)" flow
- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Personality assessments
    direction: DOWN
- tapOn: "Personality assessments" 

- scrollUntilVisible:
    element:
      text: "Personality profile (DISC)"
    direction: DOWN
    centerElement: true
- runFlow:
    when:
      visible:
         text: "BEGIN"
         below:
            text: "Personality profile (DISC)"
    commands:
      - tapOn: 
         text: "BEGIN"
         retryTapIfNoChange: false
         below:
           text: "Personality profile (DISC)"
- runFlow:
    when:
      visible:
         text: "Take again"
         below:
            text: "Personality profile (DISC)"
    commands:
      - tapOn:
          text: TAKE AGAIN
          retryTapIfNoChange: false
          below:
           text: "Personality profile (DISC)"
      - waitForAnimationToEnd
 
  
- waitForAnimationToEnd
- swipe :
   direction : DOWN

- waitForAnimationToEnd
- tapOn: 
    text : "Careful"
    retryTapIfNoChange: false
- waitForAnimationToEnd
- tapOn: "Correct"
- waitForAnimationToEnd
- tapOn: "bold"
- waitForAnimationToEnd
- tapOn: "Doubting"
- waitForAnimationToEnd
- tapOn: "Daring"
- waitForAnimationToEnd
- tapOn: "Gentle"
- waitForAnimationToEnd
- tapOn: "Decisive"
- waitForAnimationToEnd
- tapOn: "Generous"
- waitForAnimationToEnd
- tapOn: "Modest"
- waitForAnimationToEnd
- tapOn: "Optimistic"
- waitForAnimationToEnd
- tapOn: "Humble"
- waitForAnimationToEnd
- tapOn: "Playful"
- waitForAnimationToEnd
- tapOn: "Charming"
- waitForAnimationToEnd
- tapOn: "Steady"
- waitForAnimationToEnd
- tapOn: "Determined"
- waitForAnimationToEnd
- tapOn: "Critical"
- waitForAnimationToEnd
- tapOn: "lively"
- waitForAnimationToEnd
- tapOn: "kind"
- waitForAnimationToEnd
- tapOn: "Popular"
- waitForAnimationToEnd

- tapOn: "Serious"
- waitForAnimationToEnd

- tapOn: "Loyal"
- waitForAnimationToEnd

- tapOn: "Courageous"
- waitForAnimationToEnd

- tapOn: "pushy"
- waitForAnimationToEnd

- tapOn: "Tolerant"
- waitForAnimationToEnd

- tapOn: "COMPLETE"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "Update"
    commands:
      - tapOn:
          text: "GOT IT"
      - waitForAnimationToEnd
           

- assertVisible:
    text: "My Button"
    optional: true

#  locus of control flow 

- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Personality assessments
    direction: DOWN
- tapOn: "Personality assessments" 

- scrollUntilVisible:
    element:
      text: "Locus of control"
    direction: DOWN
    centerElement : true 
- runFlow:
    when:
      visible: BEGIN
    commands:
      - tapOn: 
          text: BEGIN
          below:
           text: Locus of control
- runFlow:
    when:
      visible: "TAKE AGAIN" 
    commands:
      - tapOn:
          text: "TAKE AGAIN"
          below:
           text: "Locus of control"

- waitForAnimationToEnd
- swipe:             
    direction: DOWN
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    index: 0
- waitForAnimationToEnd
- tapOn:
    text: "true"
    below:
      text: "18. Persistence and hard work usually lead to success "
- waitForAnimationToEnd

- tapOn:
    text: "true"
    below:
      text: "19. It is difficult to know who my real friends are "
- waitForAnimationToEnd
         
- tapOn:
    text: "true"
    below:
     text : "20. Other people usually control my life "
- waitForAnimationToEnd
   
- tapOn: "COMPLETE"
- waitForAnimationToEnd

# "Quality of life" flow 

- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Personality assessments
    direction: DOWN
- tapOn: "Personality assessments" 

- scrollUntilVisible:
    element:
      text: "Quality of life"
    direction: DOWN
    centerElement : true
- runFlow:
    when:
      visible: BEGIN
    commands:
      - tapOn: 
          text: BEGIN
          below:
           text: "Quality of life"
- runFlow:
    when:
      visible: "TAKE AGAIN" 
    commands:
      - tapOn:
          text: "TAKE AGAIN"
          below:
           text: "Quality of life"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"
- waitForAnimationToEnd
- tapOn: "delighted"

- waitForAnimationToEnd
- tapOn: "COMPLETE"
- waitForAnimationToEnd

# core values flow 

- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Personality assessments
    direction: DOWN
- tapOn: "Personality assessments" 

- scrollUntilVisible:
    element:
      text: "Core values"
    direction: DOWN
    centerElement : true 
- waitForAnimationToEnd    
- runFlow:
    when:
      visible: BEGIN
    commands:
      - tapOn: 
          text: BEGIN
          below:
           text: "Core values"
- runFlow:
    when:
      visible: "TAKE AGAIN" 
    commands:
      - tapOn:
          text: "TAKE AGAIN"
          below:
           text: "Core values"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "CONTINUE" 
    commands:
      - tapOn:
          text: "CONTINUE"
- waitForAnimationToEnd
- tapOn:
    id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
- tapOn:
    id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
- tapOn:
    id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
- tapOn:
    id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
- tapOn:
    id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"
- tapOn:
    id: "checked-7cc6750d-4c4f-4bab-a7ba-42daa35165e3"
- scrollUntilVisible:
   element:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
   direction: DOWN
   centerElement: true
- tapOn:
    id: "checked-42a2e85c-95c2-409a-be16-87e80dad4512"
- tapOn:
    id: "checked-9b2833de-0777-493c-8bad-3d3c98194c0d"
- tapOn:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
- tapOn:
    id: "checked-c9e9acb3-1fb2-486d-9310-e92186ce6593"
- tapOn:
    id: "checked-a4e85821-6243-4530-a9da-7d264fe6cc62"
- tapOn:
    id: "checked-ee353374-1e30-4642-8db4-38cfa2e603b6"
- tapOn:
    id: "checked-311284e7-3171-4ddc-a355-17f6f19be87a"
- tapOn:
    id: "checked-e91f1771-7628-479d-b28f-5dc0ea95feb2"
- scrollUntilVisible:
   element:
    id: "checked-ad4cfca6-3671-42d1-b1a4-e79ae5d5b496"
   direction: DOWN
   centerElement: true
- tapOn:
    id: "checked-7c48ef61-936d-4f47-9578-664f8af46387"
- tapOn:
    id: "checked-ad4cfca6-3671-42d1-b1a4-e79ae5d5b496"
- tapOn:
    id: "checked-628e49e1-a72a-43a7-829e-5be7cb47076e"
- tapOn:
    id: "checked-bcd9dc9c-a136-4b70-8865-0995f97fa647"
- tapOn:
    id: "checked-a4dcb5a7-9215-4704-8d9f-65cf24b10c87"
- tapOn:
    id: "checked-3909ea60-586f-4e96-871c-cbb021a2a533"
- tapOn:
    id: "checked-fa1ce8c8-dc9f-4e19-a373-b217dc79a362"
- scrollUntilVisible:
   element:
    id: "checked-98351416-a517-4f74-96e1-376c8aae43d3"
   direction: DOWN
   centerElement: true
- tapOn:
    id: "checked-fc131848-c1c9-413d-a98c-faacb293ddcc"
- tapOn:
    id: "checked-98351416-a517-4f74-96e1-376c8aae43d3"
- tapOn:
    id: "checked-d2dcd1a7-3e1e-48eb-b4c3-da5ffb446056"
- tapOn:
    id: "checked-fc1355bc-8721-4d69-9099-18e5a89c8b0d"
- tapOn:
    id: "checked-dc908087-0e45-42b2-b31d-f3fcc31943f1"
- tapOn:
    id: "checked-e39a5107-fd0b-4a73-83bc-a982475598be"
- tapOn:
    id: "checked-0c9295a5-c3b5-4c5a-bce7-c1e3ee11b65d"
- tapOn:
    id: "checked-da6a3ba5-4808-4f6f-8449-2e14693ddf7e"
- scrollUntilVisible:
   element:
    id: "checked-9b2c75a4-43a1-4c0a-b501-af0816b6411f"
   direction: DOWN
   centerElement: true
- tapOn:
    id: "checked-9b2c75a4-43a1-4c0a-b501-af0816b6411f"
- scrollUntilVisible:
   element:
     id: "button"
   direction: DOWN
   centerElement: false
   speed: 70
   timeout: 50000 
- tapOn: "core-assessment-continue"
- waitForAnimationToEnd
- tapOn:
    id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
- tapOn:
    id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
- tapOn:
    id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
- tapOn:
    id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
- tapOn:
    id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"
- tapOn:
    id: "checked-7cc6750d-4c4f-4bab-a7ba-42daa35165e3"
- scrollUntilVisible:
   element:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
   direction: DOWN
   centerElement: true
- tapOn:
    id: "checked-42a2e85c-95c2-409a-be16-87e80dad4512"
- tapOn:
    id: "checked-9b2833de-0777-493c-8bad-3d3c98194c0d"
- tapOn:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
- tapOn:
    id: "checked-c9e9acb3-1fb2-486d-9310-e92186ce6593"
- scrollUntilVisible:
   element:
     id: "button"
   direction: DOWN
   centerElement: false
- tapOn: "core-assessment-continue"
- waitForAnimationToEnd
- tapOn:
    id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
- tapOn:
    id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
- tapOn:
    id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
- tapOn:
    id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
- tapOn:
    id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"

- tapOn: COMPLETE
- waitForAnimationToEnd
- assertVisible : assessment Complete 

