appId: com.headlamp.uno
---
# activty Teacking , adding custom and Standard activity and then deleting them
# edit Exercise


- tapOn:   Power Power
# - scrollUntilVisible:
#     element:  
#       id : activty Teacking 
#     direction: DOWN
# - tapOn:
#     id: "activty Teacking"
- scrollUntilVisible:
    element:  
      text : "Activity tracking" 
    direction: DOWN
- tapOn:
    text : "Activity tracking"  
# adding a activity 
# Standard
- runFlow:
    when:
      notVisible:
        text: Diet
    commands:      
      - tapOn: "add "
      - tapOn: Standard
      - tapOn: "Diet"
      # add activity button       
      - tapOn:
          id: "button"
      - scrollUntilVisible:
          element:
            text: "Diet"
          direction: DOWN
          centerElement: true    
      - assertVisible:
          text : "Diet" 
          above : "2500 calories per day"
- waitForAnimationToEnd


# custom 
- tapOn: "add "
- tapOn: "Custom"
- tapOn:
    id: "text-input-outlined-label-inactive"
- inputText: Cycling
- tapOn:
    id: "custom-activity-Track as-less/typical/more"
- tapOn: "yes/no Log whether or not you did this activity"
# add activity button    
- tapOn:
    id: "button"

- waitForAnimationToEnd

# edit activity 
- swipe :
   direction : DOWN
- scrollUntilVisible:
    element:
      text: Exercise
    direction: DOWN
    centerElement: false

- tapOn:
    id: "edit-activity-Exercise"

- tapOn:
    id: "custom-activity-My typical-30 min per day"
- waitForAnimationToEnd
- tapOn:
    id: "text-input-outline"
- eraseText
- inputText: 30
- back
- waitForAnimationToEnd

# delete activity
- scrollUntilVisible:
    element:
      text: Diet
    direction: DOWN
    centerElement: false
- waitForAnimationToEnd
- tapOn:
    id: "edit-activity-Diet"
- waitForAnimationToEnd
# remove button     
- tapOn:
    id: "remove-activity-button"   
- tapOn: "REMOVE"
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: Cycling
    direction: DOWN
    centerElement: false
- tapOn:
    id: "edit-activity-Cycling"
    rightOf:
      text: Cycling 
    below:
      text : Cycling   
# remove button     
- tapOn:
    id: "remove-activity-button"  
- tapOn: "REMOVE"
- assertNotVisible: diet 
- assertNotVisible: Cycling 
- back